; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mplay32/extr_mplay32.c_GetDeviceName.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mplay32/extr_mplay32.c_GetDeviceName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i8*, i8*, i32, i64 }

@MCI_DEVTYPE_WAVEFORM_AUDIO = common dso_local global i32 0, align 4
@MCI_ALL_DEVICE_ID = common dso_local global i32 0, align 4
@MCI_SYSINFO = common dso_local global i32 0, align 4
@MCI_SYSINFO_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32, i8*)* @GetDeviceName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @GetDeviceName(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_2__, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 4
  store i64 0, i64* %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 3
  store i32 %9, i32* %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 2
  store i8* %11, i8** %12, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  store i8* %13, i8** %14, align 8
  %15 = load i32, i32* @MCI_DEVTYPE_WAVEFORM_AUDIO, align 4
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 %15, i32* %16, align 8
  %17 = load i32, i32* @MCI_ALL_DEVICE_ID, align 4
  %18 = load i32, i32* @MCI_SYSINFO, align 4
  %19 = load i32, i32* @MCI_SYSINFO_NAME, align 4
  %20 = ptrtoint %struct.TYPE_2__* %7 to i32
  %21 = call i8* @mciSendCommand(i32 %17, i32 %18, i32 %19, i32 %20)
  ret i8* %21
}

declare dso_local i8* @mciSendCommand(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
